--- a/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
@@ -676,9 +676,29 @@ BODY {
             .left-block{
               position: relative;
 
+              .drawer-icon{
+                background: url(images/announcement/all-files-icon.png) 0 0 no-repeat;
+                width: 20px;
+                height: 20px;
+                right: 37px;
+                bottom: 30px;
+                position: absolute;
+                cursor: pointer;
+                opacity: 0;
+              }
+
+              &.with-standards{
+                .drawer-icon{
+                  bottom: 113px;
+                }
+
+                .new-item-dropdown{
+                  bottom: 47px;
+                }
+              }
+
               .left-block-container{
                 display: inline-block;
-                height: 159px;
 
                 &:hover{
                   .drawer-icon{
@@ -689,17 +709,6 @@ BODY {
                     }
                   }
                 }
-              }
-
-              .drawer-icon{
-                background: url(images/announcement/all-files-icon.png) 0 0 no-repeat;
-                width: 20px;
-                height: 20px;
-                right: 37px;
-                top: 93px;
-                position: absolute;
-                cursor: pointer;
-                opacity: 0;
               }
             }
 
@@ -712,7 +721,7 @@ BODY {
               font-size: 14px;
               font-family: "Arial Narrow", Arial;
               color: #000;
-              top: 116px;
+              bottom: -33px;
 
               >DIV{
                 height: 20px;
