--- a/Chalkable.Web/assets/jade/activities/announcement/LastMessages.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/LastMessages.jade
@@ -1,7 +1,10 @@
 -length=self.getItems().length
-.new-item-dropdown(data-length=length)
-    h1 Recent #{self.getAnnouncementTypeName()} Assignments
-    each item,i in self.getItems()
-        div(class = i ? "" : "current", data-value=item,data-index=i).autofill-item=item
+if length
+    .new-item-dropdown(data-length=length)
+        h1 Recent #{self.getAnnouncementTypeName()} Assignments
+        each item,i in self.getItems()
+            div(class = i ? "" : "current", data-value=item,data-index=i).autofill-item=item
+else
+    .no-assignments-text There are no recent #{self.getAnnouncementTypeName()} assignments
 
 
