--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_details.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_details.scss
@@ -35,6 +35,7 @@ DIV.page {
                 width: 100%;
                 outline: none;
                 margin-top: 30px;
+                white-space: normal;
               }
               .app-buy {
                 width: 122px;
