--- a/Chalkable.Web/App_Code/ChlkHelpers.cshtml
+++ b/Chalkable.Web/App_Code/ChlkHelpers.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Configuration
 @using System.Web.Mvc
 @using System.Web.Mvc.Html;
+@using Chalkable.Common
 @using Chalkable.Web.Extensions
 
 @helper MixPanel()
@@ -18,7 +19,7 @@
                     b.__SV = 1.2;
                 }
             })(document, window.mixpanel || []);
-            mixpanel.init("@ConfigurationManager.AppSettings["mixpanel-token"]");
+            mixpanel.init("@Settings.MixPanelToken");
         </script>
     }
 }
