fixed bug CHLK-3321 Student. Class profile for some classes doesn't work

--- a/Chalkable.Web/assets/jade/sidebars/SiteSearch.jade
+++ b/Chalkable.Web/assets/jade/sidebars/SiteSearch.jade
@@ -9,7 +9,7 @@ li(data-title = self.getDescription(), data-value = self.getId().valueOf() + '|'
                         +PersonImg(self.getPersonInfo(), 47)
                         div.title= self.getDescription()
             when 4
-                +ActionLink('class', 'details', self.getId()).left.image-container.white.shadow
+                +ActionLink('class', 'info', self.getId()).left.image-container.white.shadow
                     div.site-search-class
                         .img-wrapper
                             +ClassImg(self, 45, 80).avatar
