--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
@@ -39,7 +39,7 @@ items = self.getSortedAppsAndAttachments();
 if self.needButtons
     #attach-file-area.announcement-item.attach-file-area
         if !isAnnouncement
-            +ActionLink('announcement', 'attachApp', self.getId())#add-application.simple-gray-button Attach App
+            +ActionLink('announcement', 'attachApp', self.getId(), self.getClassId())#add-application.simple-gray-button Attach App
         .simple-gray-button.file Attach File
             +FileUpload('announcement', 'uploadAttachment', [self.getId().valueOf()])#add-attachment.simple-gray-button
 each item, i in items
