fixed for CHLK-3317 Developer. Developer can't create a paid App

--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -271,7 +271,7 @@
                         break;
                     }
                 }
-                if (!result)
+                if (!result && parseInt(value, 10) != value)
                     return "Whole numbers or .25 increments";
             }
 
