fixed for CHLK-3313 Teacher. Item view. When teacher put a comment for the last student in an item view and presses 'Enter', dropdown with comments won't be closed

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
@@ -54,7 +54,7 @@ getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value,
                                                     div
                                                         +PersonImg(owner, 24)
                                                     div
-                                                        +TextArea(name="comment", maxlength=500, data-comment=item.getComment()).comment-input=item.getComment()
+                                                        +TextArea(name="comment", maxlength=500, data-comment=item.getComment()).comment-input.with-grid-focus=item.getComment()
                                                         .grading-comments-list
                                                         span.enter=Msg.Enter_when_done
                     div(id = "grade-container-" + item.getStudentInfo().getId()).i-b.grade-block
