--- a/Chalkable.Web/assets/jade/controls/scroll-box.jade
+++ b/Chalkable.Web/assets/jade/controls/scroll-box.jade
@@ -9,8 +9,7 @@ mixin ScrollBox(formId, offset, mustScrollId, pageSizeId, actualCountId, totalCo
     -self.processAttrs(attributes)
     .chlk-scrollbox.with-scroller(attributes)
         block
-        .scrollbox-loader.horizontal-loader.x-hidden
-
+        .scrollbox-loader.horizontal-loader
 
 
 
