--- a/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
@@ -6,6 +6,21 @@ BODY {
         > DIV {
           #main-wrapper {
             #main {
+              .app-general-info-page{
+                &.partial-update-general-info {
+                  .chlk-scrollbox {
+                    .horizontal-loader {
+                      display: inline-block;
+                    }
+                  }
+                }
+
+                .chlk-scrollbox{
+                  .horizontal-loader{
+                    display: none;
+                  }
+                }
+              }
               DIV.app-general-info{
 
                 .chart-bg{
